fix: Add overflow property and set minimum heights for flex and sidebar containers

--- a/less/documentDBFabric.less
+++ b/less/documentDBFabric.less
@@ -7,6 +7,7 @@ html {
 body {
   font-family: @FabricFont;
   background-color: #f5f5f5;
+  overflow: auto;
 }
 
 a {
@@ -22,6 +23,14 @@ a:focus {
 
 .splashLoaderContainer {
   background-color: #f5f5f5;
+}
+
+.flexContainer {
+  min-height: 700px;
+}
+
+.sidebarContainer {
+  min-height: 500px;
 }
 
 #divExplorer {
